New changes to binabox

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <span class="btn1"></span>
                 <span class="btn2"></span>
                 <span class="btn3"></span>
+                <span>test changes</span>
               </span>
             </div>
 
